--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
        python -m pip install --upgrade pip
-       pip install pytest requests string random threading ssl json ctypes os
+       pip install pytest requests random threading ssl json ctypes
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
 #      run: |
