--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,8 +25,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-       python -m pip install --upgrade pip
-       pip install pytest requests ssl json ctypes
+       python -m pip3 install --upgrade pip3
+       pip3 install pytest requests ssl json ctypes
 #        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
 #      run: |
